--- a/CTS_Analytics/Views/Mnemonic/doc.cshtml
+++ b/CTS_Analytics/Views/Mnemonic/doc.cshtml
@@ -22,25 +22,13 @@
                     <li><a href='@Url.Action("doc_detail_sar", "Mnemonic")'>@Resources.ResourceMnemonic.SarMineName</a></li>
                 </ul>
             </div>
-
-
-
-            <!-- <div class="sprav-block">
-        <div class="title"><i class="icon icon_tech"></i> Техника</div>
+             <div class="sprav-block">
+        <div class="title"><i class="icon icon_tech"></i> @Resources.ResourceMnemonic.Technika</div>
 
         <ul class="spisok">
-            <li><a href="#">Вагоны-хопперы  для перевозки сыпучих и пылевидных гру­зов</a></li>
-            <li><a href="#">Вагоны для перевозки пылевидных гру­зов</a></li>
-            <li><a href="#">Вагоны-хопперы  для перевозки сыпучих и пылевидных гру­зов</a></li>
-            <li><a href="#">Вагоны для перевозки пылевидных гру­зов</a></li>
-            <li><a href="#">Вагоны-хопперы  для перевозки сыпучих и пылевидных гру­зов</a></li>
-            <li><a href="#">Вагоны для перевозки пылевидных гру­зов</a></li>
-            <li><a href="#">Вагоны-хопперы  для перевозки сыпучих и пылевидных гру­зов</a></li>
-            <li><a href="#">Вагоны для перевозки пылевидных гру­зов</a></li>
-            <li><a href="#">Вагоны-хопперы  для перевозки сыпучих и пылевидных гру­зов</a></li>
-            <li><a href="#">Вагоны для перевозки пылевидных гру­зов</a></li>
+            <li><a href='@Url.Action("doc_detail_wagon_search", "Mnemonic")'>@Resources.ResourceMnemonic.WagonSearch</a></li>
         </ul>
-    </div>-->
+    </div>
 
 
         </div>
