--- a/CTS_Analytics/Views/Mnemonic/Mine_konv.cshtml
+++ b/CTS_Analytics/Views/Mnemonic/Mine_konv.cshtml
@@ -77,7 +77,18 @@
                     </tbody>
                 </table>
             </div>
-            @Html.PagedListPager(Model.PagedBeltTransfers, page => Url.Action("Mine_konv", new { ID = Model.ReturnID, beltScaleID = Model.BeltID, page = page }))
+            @Html.PagedListPager(Model.PagedBeltTransfers, page =>
+       {
+           string longurl = Request.Url.AbsoluteUri;
+           var uriBuilder = new UriBuilder(longurl);
+           var query = HttpUtility.ParseQueryString(uriBuilder.Query);
+           query["ID"] = Model.ReturnID;
+           query["beltScaleID"] = Model.BeltID.ToString();
+           query["page"] = page.ToString();
+           uriBuilder.Query = query.ToString();
+           longurl = uriBuilder.ToString();
+           return longurl;
+       })
         </div>
     </div>
 </div>
