--- a/CTS Manual Input/Views/Skip/Add.cshtml
+++ b/CTS Manual Input/Views/Skip/Add.cshtml
@@ -1,5 +1,4 @@
-﻿@using CTS_Models
-@model CTS_Models.SkipTransfer
+﻿@model CTS_Manual_Input.Models.SkipModels.SkipTransferFormModel
 
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
