--- a/CTS Manual Input/Views/Skip/Edit.cshtml
+++ b/CTS Manual Input/Views/Skip/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model CTS_Models.SkipTransfer
+﻿@model CTS_Manual_Input.Models.SkipModels.SkipTransferFormModel
 
 @{
 	Layout = "~/Views/Shared/_Layout.cshtml";
@@ -13,6 +13,9 @@
 
 		@Html.HiddenFor(m => m.ID)
 		@Html.HiddenFor(m => m.EquipID)
+	    @Html.HiddenFor(m => m.Equip.Name)
+	    @Html.HiddenFor(m => m.SkipWeight)
+	    @Html.HiddenFor(m => m.Equip.Weight)
 		@Html.AntiForgeryToken()
 
 		<div class="form-group">
@@ -26,6 +29,7 @@
 			@Html.LabelFor(m => Model.LiftingID, "Количество подъемов", new { @class = "control-label col-lg-2" })
 			<div class="col-lg-10">
 				@Html.EditorFor(m => Model.LiftingID, new { htmlAttributes = new { @class = "form-control" } })
+			    @Html.ValidationMessageFor(m => Model.LiftingID)
 			</div>
 		</div>
 
