wagon transfer page bugfix

--- a/CTS_Analytics/Views/Mnemonic/Doc-detail/doc_detail_Wagon_search.cshtml
+++ b/CTS_Analytics/Views/Mnemonic/Doc-detail/doc_detail_Wagon_search.cshtml
@@ -61,7 +61,7 @@
                                 <td>@transfer.WagonTransfer.Brutto</td>
                                 <td>@transfer.WagonTransfer.Direction</td>
 
-                                @if (transfer.Photo != null && transfer.Photo.PictureGallery.Any())
+                                @if (transfer.Photo.PictureGallery != null && transfer.Photo.PictureGallery.Any())
                                 {
                                     var uniqueDataID = 1;
                                     <td>
