vertical text in header Role Admin

--- a/CTS_RoleAdmin/Views/Home/RoleList.cshtml
+++ b/CTS_RoleAdmin/Views/Home/RoleList.cshtml
@@ -15,8 +15,8 @@
             @foreach (var group in Model.AllCtsRoles)
             {
                 <th>
-                    @group.RoleName
-                </th>
+                    <span>@group.RoleName</span>
+</th>
             }
             <th></th>
         </tr>
