--- a/CTS_RoleAdmin/Views/Shared/_Layout.cshtml
+++ b/CTS_RoleAdmin/Views/Shared/_Layout.cshtml
@@ -1,23 +1,24 @@
 ﻿<!DOCTYPE html>
 <html lang="ru">
 <head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="icon" href="~/Content/images/favicon.ico" type="image/x-icon">
-	<link rel="shortcut icon" href="~/Content/images/favicon.ico" type="image/x-icon">
-	<title>COAL TRACKING - Приложение управления доступом</title>
-	<link href="~/Content/css/bootstrap.min.css" rel="stylesheet">
-	<link href="~/Content/style/fonts.css" rel="stylesheet">
-	<link href="~/Content/style/style.css" rel="stylesheet">
-	<link href="~/Content/style/responsive.css" rel="stylesheet">
-	<link href="~/Content/css/bootstrap-datetimepicker.min.css" rel="stylesheet" />
-	<link href="~/Content/RolesStyles.css" rel="stylesheet" />
-	<script src="~/Scripts/jquery.min.js"></script>
-	<script src="~/Scripts/bootstrap.min.js"></script>
-	<script src="~/Scripts/moment-with-locales.min.js"></script>
-	<script src="~/Scripts/bootstrap-datetimepicker.min.js"></script>
-	@Scripts.Render("~/scripts/jquery.unobtrusive-ajax.js")
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" href="~/Content/images/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="~/Content/images/favicon.ico" type="image/x-icon">
+    <title>COAL TRACKING - Приложение управления доступом</title>
+    <link href="~/Content/css/bootstrap.min.css" rel="stylesheet">
+    <link href="~/Content/style/fonts.css" rel="stylesheet">
+    <link href="~/Content/style/style.css" rel="stylesheet">
+    <link href="~/Content/style/responsive.css" rel="stylesheet">
+    <link href="~/Content/css/bootstrap-datetimepicker.min.css" rel="stylesheet" />
+    <link href="~/Content/RolesStyles.css" rel="stylesheet" />
+    <link href="~/Content/Site.css" rel="stylesheet" />
+    <script src="~/Scripts/jquery.min.js"></script>
+    <script src="~/Scripts/bootstrap.min.js"></script>
+    <script src="~/Scripts/moment-with-locales.min.js"></script>
+    <script src="~/Scripts/bootstrap-datetimepicker.min.js"></script>
+    @Scripts.Render("~/scripts/jquery.unobtrusive-ajax.js")
 </head>
 <body>
 	<div class="wrapper">
